--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@
 ###< symfony/phpunit-bridge ###
 /nbproject/
 /nbproject/private/
+
+###> squizlabs/php_codesniffer ###
+/.phpcs-cache
+/phpcs.xml
+###< squizlabs/php_codesniffer ###
