--- a/composer.json
+++ b/composer.json
@@ -28,11 +28,12 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.15",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "squizlabs/php_codesniffer": "3.*"
+        "symfony/test-pack": "*"
     },
     "config": {
         "preferred-install": {
