--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,9 @@
-#easy_admin:
-#    entities:
-#        # List the entity class name you want to manage
-#        - App\Entity\Product
-#        - App\Entity\Category
-#        - App\Entity\User
+easy_admin:
+    entities:
+        - App\Entity\AlbumPhotos
+        - App\Entity\Photo
+        - App\Entity\CategorieVideos
+        - App\Entity\Video
+        - App\Entity\Musique
+        - App\Entity\Concert
+        - App\Entity\Mail
